# nextshell

./: .env  .gitignore  CONFIG_INDEX.md  Cargo.toml  Makefile  README.md  index.html  index.js  jest.config.js  jest.setup.js  nextshell-workflows.js  package-lock.json  package.json  rust-toolchain
.cargo/: config.toml
.github/workflows/: ci.yml  lint-pr-title.yml  release.yml
__tests__/: example.test.js
config/: default.js  default.json  production.json
logs/: .be233a35b07da5f54b481db8c76d62858ce5b5e5-audit.json  .f5618679ee50a294ed7de94f6db32c4f1b47d221-audit.json
middleware/: index.js
routes/: index.js
server/: .env  .env.example  .eslintrc.json  CHANGELOG.md  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json
server/__tests__/: database.test.js  example.test.js
server/agent/: code-suggestions.js  index.js  routes.js
server/examples/: README.md  handlebars_template.rs  sse_chat.rs  tracing.rs  websockets_chat.rs  wrapping.rs
server/routes/: index.js
server/src/: reject.rs  server.rs
server/tests/: body.rs  filter.rs  method.rs  path.rs  query.rs  redirect.rs  reply_with.rs  ws.rs
themes/base16/: README.md
themes/nextshell_bundled/: README.md
themes/special_edition/: README.md  asteroid_city.yaml  grafbase.yaml  pride.yaml
themes/standard/: README.md  azuki.yaml  dark-pinkish.yaml  kanagawa.yaml  light-pinkish.yaml  (+2 more)
utils/: logger.js
workflows/workflows/: Cargo.toml
workflows/workflows/src/: api_server.rs  completion_manager.rs  plugin_manager.rs  shell_manager.rs  syntax_highlighter.rs  webhook_manager.rs
(+134 files in other folders)
